# gnucash-plaintext

./: .dockerignore  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MIGRATION.md  NOTICE  PODMAN.md  README.md  RELEASE_NOTES.md  docker-compose.yml  gnucash_to_plaintext.py  gnucash_to_plaintext_test.py  migration_log.md  migration_plan.md  plaintext_to_gnucash.py  plaintext_to_gnucash_test.py  pyproject.toml  utils.py
.github/workflows/: GnuCash_plaintext.yml  ci.yml
cli/: close_books_cmd.py  export_beancount_cmd.py  export_cmd.py  import_beancount_cmd.py  import_cmd.py  invoice_print_cmd.py  main.py  validate_cmd.py
config/: categories.yaml
docs/: gnucash-beancount-format.md  phase0_day2_script_analysis.md
editor/: gnucash_editor.py  gnucash_to_plaintext.py  plaintext_to_gnucash.py  utils.py
editor/tests/: gnucash_editor.test.input.txt  gnucash_editor.test.output.txt  gnucash_editor_test.py  gnucash_to_plaintext.test.input.gnucash  gnucash_to_plaintext_test.py
infrastructure/gnucash/: engine.py  utils.py
parser/: gnucash_parser.py  plaintext_parser.py  plaintext_parser_test.py
parser/tests/: plaintext_parser_test.py  test_beancount_compatible_account_name.book  test_beancount_compatible_commodity_symbol.book  test_book.txt
repositories/: gnucash_repository.py
scripts/: README.md  build.bat  build.ps1  build.sh  dev-start.bat  dev-start.ps1  dev-start.sh  dev-stop.bat  dev-stop.ps1  dev-stop.sh  fix-lint.sh  install-hooks.sh  lint.sh  review-commit.sh  run.bat  run.ps1  run.sh  shell.bat  shell.ps1  shell.sh  test-all-versions-parallel.sh  test-all-versions.sh  test-deployment-inner.sh  test-deployment.sh  test-in-docker.sh  test.bat  test.ps1  test.sh
scripts/hooks/: pre-commit
services/: account_categorizer.py  beancount_converter.py  beancount_parser.py  book_closer.py  conflict_resolver.py  gnucash_importer.py  invoice.xslt  invoice_renderer.py  ledger_validator.py  plaintext_parser.py  transaction_matcher.py
tests/: conftest.py  plaintext_to_gnucash_test.py
tests/fixtures/: business_objects.txt  business_objects_only.txt  close_books_test_data.txt  comprehensive_test_data.txt  import_new_accounts_only.txt  import_new_invalid_account_type.txt  import_new_with_transaction.txt
tests/integration/: test_beancount_roundtrip.py  test_business_objects.py  test_cli_close_books.py  test_cli_export.py  test_cli_import.py  test_cli_validate.py  test_comprehensive_fixture.py  test_full_conversion_chain.py  test_roundtrip.py
tests/unit/infrastructure/gnucash/: test_utils.py
tests/unit/repositories/: test_gnucash_repository.py
tests/unit/services/: test_account_categorizer.py  test_book_closer.py  test_conflict_resolver.py  test_ledger_validator.py  test_transaction_matcher.py  test_transaction_matcher_basic.py
tests/unit/use_cases/: test_close_books.py  test_export_filtering.py  test_export_transactions.py  test_import_transactions.py  test_validate_ledger.py
use_cases/: close_books.py  export_beancount.py  export_business_objects.py  export_transactions.py  import_beancount.py  import_transactions.py  validate_ledger.py
